NIM-3444 OSS changes

--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -190,6 +190,13 @@
          </execution>
        </executions>
      </plugin>
+     <plugin>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-resources-plugin</artifactId>
+  		<configuration>
+    		<includeEmptyDirs>true</includeEmptyDirs>
+  		</configuration>
+	</plugin>
     </plugins>
   </build>
 
