--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -8,22 +8,121 @@
 	<packaging>pom</packaging>
 	<name>platform.dependencies</name>
 	<description>Nimbus Bill of materials</description>
-	<url>http://maven.apache.org</url>
+	<url></url>
 	<organization>
 		<name>Anthem Inc.</name>
 		<url>https://www.anthem.com</url>
 	</organization>
 
+	<properties>
+		<main.basedir>..</main.basedir>
+		<disable.checks>false</disable.checks>
+		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
+		<spring.cloud.version>Camden.RELEASE</spring.cloud.version>
+		<sdn.version>4.1.0.M1</sdn.version>
+		<neo4j.ogm.version>1.1.6</neo4j.ogm.version>
+		<neo4j.ogm-api.version>2.0.0-M02</neo4j.ogm-api.version>
+		<neo4j.version>2.2.5</neo4j.version>
+		<neo4j-cypher-compiler.version>2.3.2</neo4j-cypher-compiler.version>
+		<swagger.version>2.4.0</swagger.version>
+		<commons-io.version>2.4</commons-io.version>
+		<drools.version>5.6.0.Final</drools.version>
+		<commons-lang.version>3.3.2</commons-lang.version>
+		<activiti-spring-boot.version>6.0.0.Beta4</activiti-spring-boot.version>
+		<apache-dir-server.version>1.5.5</apache-dir-server.version>
+		<jackson-mapper-asl.version>1.9.6</jackson-mapper-asl.version>
+		<maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
+		<maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
+		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+		<maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+		<maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+		<maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
+		<maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
+		<maven-site-plugin.version>3.5.1</maven-site-plugin.version>
+		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+		<maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>
+		<maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
+		<maven-war-plugin.version>3.0</maven-war-plugin.version>
+		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+		<exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
+		<maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
+		<mojo-exec-plugin.version>1.5.0</mojo-exec-plugin.version>
+		<nimbus.spec.model.version>0.0.1-SNAPSHOT</nimbus.spec.model.version>
+		<nimbus.spec.model.test.version>0.0.1-SNAPSHOT</nimbus.spec.model.test.version>
+		<nimbus.utils.version>0.0.1-SNAPSHOT</nimbus.utils.version>
+		<nimbus.utils.converter.version>0.0.1-SNAPSHOT</nimbus.utils.converter.version>
+		<nimbus.utils.restclients.version>0.0.1-SNAPSHOT</nimbus.utils.restclients.version>
+		<nimbus.utils.refdata.version>0.0.1-SNAPSHOT</nimbus.utils.refdata.version>
+		<nimbus.process.version>0.0.1-SNAPSHOT</nimbus.process.version>
+		<nimbus.model.starter.version>0.0.1-SNAPSHOT</nimbus.model.starter.version>
+		<nimbus.process.starter.version>0.0.1-SNAPSHOT</nimbus.process.starter.version>	
+	</properties>
+
 	<developers>
+		<developer>
+			<id>Soham.Chakravarti</id> <!-- Replace with github id -->
+			<name>Soham Chakravarti</name>
+			<organization>Anthem Inc.</organization>
+			<organizationUrl>https://www.anthem.com</organizationUrl>
+			<roles>
+				<role>Project lead</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>jayant.chaudhuri</id> <!-- Replace with github id -->
+			<name>Jayant Chaudhuri</name>
+			<organization>Anthem Inc.</organization>
+			<organizationUrl>https://www.anthem.com</organizationUrl>
+			<roles>
+				<role>Architect</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>dinakar.meda</id> <!-- Replace with github id -->
+			<name>Dinakar Meda</name>
+			<organization>Anthem Inc.</organization>
+			<organizationUrl>https://www.anthem.com</organizationUrl>
+			<roles>
+				<role>Architect</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>rakesh.patel</id> <!-- Replace with github id -->
+			<name>Rakesh Patel</name>
+			<organization>Anthem Inc.</organization>
+			<organizationUrl>https://www.anthem.com</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>swetha.vemuri</id> <!-- Replace with github id -->
+			<name>Swetha Vemuri</name>
+			<organization>Anthem Inc.</organization>
+			<organizationUrl>https://www.anthem.com</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+		</developer>
 	</developers>
 
 	<licenses>
+	 <license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
 	</licenses>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-	</properties>
+	<scm>
+		<url>https://github.com/anthem-projects/nimbus-oss</url>
+	</scm>
 
 	<dependencyManagement>
 
@@ -32,69 +131,281 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Camden.RELEASE</version>
+				<version>${spring.cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			
-			<!--  Check here for compatible boot dependencies :
-			https://repo.spring.io/release/org/springframework/cloud/spring-cloud-starter-parent/Camden.RELEASE/ -->
+
+			<!-- Check here for compatible boot dependencies : https://repo.spring.io/release/org/springframework/cloud/spring-cloud-starter-parent/Camden.RELEASE/ -->
 			<dependency>
 				<!-- Import dependency management from Spring Boot -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>1.4.0.RELEASE</version>
+				<version>${spring.boot.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-            
-            <dependency>
+
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-releasetrain</artifactId>
+				<version>Hopper-SR1</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.spec.model</artifactId>
+				<version>${nimbus.spec.model.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.spec.model.test</artifactId>
+				<version>${nimbus.spec.model.test.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.utils.converter</artifactId>
+				<version>${nimbus.utils.converter.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.utils.rest.client</artifactId>
+				<version>${nimbus.utils.restclients.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.utils.reference.data</artifactId>
+				<version>${nimbus.utils.refdata.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.core.process</artifactId>
+				<version>${nimbus.process.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.core.process</artifactId>
+				<version>${nimbus.process.version}</version>
+				<type>test-jar</type>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.starter-spec-model</artifactId>
+				<version>${nimbus.model.starter.version}</version>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>com.anthem.nimbus.platform</groupId>
+				<artifactId>com.anthem.nimbus.platform.starter-core-process</artifactId>
+				<version>${nimbus.process.starter.version}</version>
+				<type>pom</type>
+			</dependency>
+			<!-- Third Party must have dependencies -->
+			<dependency>
+				<groupId>org.activiti</groupId>
+				<artifactId>activiti-spring-boot-starter-basic</artifactId>
+				<version>${activiti-spring-boot.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>io.springfox</groupId>
 				<artifactId>springfox-swagger2</artifactId>
-				<version>2.4.0</version>
+				<version>${swagger.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.springfox</groupId>
 				<artifactId>springfox-swagger-ui</artifactId>
-				<version>2.4.0</version>
+				<version>${swagger.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.4</version>
+				<version>${commons-io.version}</version>
 			</dependency>
-			
-			<dependency> 
-				<groupId>com.anthem.nimbus.platform</groupId> 
-				<artifactId>com.anthem.nimbus.platform.core.extension</artifactId> 
-				<version>${project.version}</version> 
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang.version}</version>
 			</dependency>
-			<dependency> 
-				<groupId>com.anthem.nimbus.platform</groupId> 
-				<artifactId>com.anthem.nimbus.platform.starter-spec-model</artifactId> 
-				<version>${project.version}</version> 
-				<type>pom</type>
+			<dependency>
+				<groupId>org.drools</groupId>
+				<artifactId>drools-core</artifactId>
+				<version>${drools.version}</version>
 			</dependency>
-			<dependency> 
-				<groupId>com.anthem.nimbus.platform</groupId> 
-				<artifactId>com.anthem.nimbus.platform.starterclient-mgmt</artifactId> 
-				<version>${project.version}</version> 
-				<type>pom</type>
+			<dependency>
+				<groupId>org.drools</groupId>
+				<artifactId>drools-compiler</artifactId>
+				<version>${drools.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.eclipse.jdt.core.compiler</groupId>
+						<artifactId>ecj</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
-			<dependency> 
-				<groupId>com.anthem.nimbus.platform</groupId> 
-				<artifactId>com.anthem.nimbus.platform.starter-auth-server</artifactId> 
-				<version>${project.version}</version> 
-				<type>pom</type>
+			<dependency>
+				<groupId>org.neo4j.app</groupId>
+				<artifactId>neo4j-server</artifactId>
+				<version>${neo4j.version}</version>
 			</dependency>
-			<dependency> 
-				<groupId>com.anthem.nimbus.platform</groupId> 
-				<artifactId>com.anthem.nimbus.platform.starter-core-process</artifactId> 
-				<version>${project.version}</version> 
-				<type>pom</type>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-ogm</artifactId>
+				<version>${neo4j.ogm.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-ogm</artifactId>
+				<version>${neo4j.ogm.version}</version>
+				<type>test-jar</type>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-ogm-api</artifactId>
+				<version>${neo4j.ogm-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-kernel</artifactId>
+				<version>${neo4j.version}</version>
+				<type>test-jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j.app</groupId>
+				<artifactId>neo4j-server</artifactId>
+				<version>${neo4j.version}</version>
+				<type>test-jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j.test</groupId>
+				<artifactId>neo4j-harness</artifactId>
+				<version>${neo4j.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.neo4j</groupId>
+				<artifactId>neo4j-cypher-compiler-2.3</artifactId>
+				<version>${neo4j-cypher-compiler.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-neo4j</artifactId>
+				<version>${sdn.version}</version>
+				<type>test-jar</type>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-neo4j</artifactId>
+				<version>${sdn.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.directory.server</groupId>
+				<artifactId>apacheds-server-jndi</artifactId>
+				<version>${apache-dir-server.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+				<version>${jackson-mapper-asl.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>${maven-assembly-plugin.version}</version>
+					<configuration>
+						<recompressZippedFiles>false</recompressZippedFiles>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>${maven-clean-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>${maven-deploy-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${maven-dependency-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-enforcer-plugin</artifactId>
+					<version>${maven-enforcer-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>${maven-failsafe-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>${maven-install-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${maven-jar-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${maven-javadoc-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven-resources-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>${maven-shade-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>${maven-source-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>${maven-war-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>${exec-maven-plugin.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<plugins>
+		</plugins>
+	</build>
+
+	<profiles>
+	</profiles>
 
 </project>
