--- a/platform.utils/platform.utils.reference.data/pom.xml
+++ b/platform.utils/platform.utils.reference.data/pom.xml
@@ -9,24 +9,16 @@
   </parent>
   <artifactId>com.anthem.nimbus.platform.utils.reference.data</artifactId>
   <name>platform.utils.reference.data</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <url></url>
+	<description>Nimbus Utility library for ref data laods</description>
+	<organization>
+		<name>Anthem Inc.</name>
+		<url>https://www.anthem.com</url>
+  	</organization>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
     <dependency>
         <groupId>org.springframework.session</groupId>
         <artifactId>spring-session-data-mongo</artifactId>
       </dependency>
-     <dependency>
-			<groupId>com.anthem.nimbus.platform</groupId>
-			<artifactId>com.anthem.nimbus.platform.spec.model</artifactId>
-			<version>${project.version}</version>
-	</dependency>
   </dependencies>
 </project>
