Integration tests framework-Embed Mongo,Redis and multiple test profiles
1. AbstractPlatformIntegrationTest - base class to be extended for
integration test cases
2. MongoIntegrationTestConfig, RedisIntegrationTestConfig - Config for
embedded mongo, redis
3. DefaultMongoModelPersistenceHandlerTest - integration testcase to
demo the embedded instances.
4. EmbeddedMongoConnectionTest - Test case for verifiying the connection
settings for embedded mongo
5. application-build.yml. Sample properties file for environment based
connection settings. Need to use spring.profiles.active=build when doing
a maven build in CI server.

NIM-3801

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -2,7 +2,7 @@ server:
      port: 8080
 
 loader:
-  path: /nimbus_clientextensions/com.anthem.nimbus.platform.client.extension.cm-0.0.1-SNAPSHOT.jar
+  path: /clientextensions/com.anthem.nimbus.platform.client.extension.cm-0.0.1-SNAPSHOT.jar
 
      
 security:
@@ -243,4 +243,9 @@ static:
           label: "Transition to other program"
         - code: "23"
           label: "Unable to reach" 
+          
+spring:
+ redis:
+  host: localhost
+  port: 6379
          
