--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -144,6 +144,11 @@
 			<artifactId>com.anthem.oss.nimbus.core.test</artifactId>
 			<!-- <scope>test</scope> -->
 		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
