--- a/platform.core.process/src/test/resources/application-build.yml
+++ b/platform.core.process/src/test/resources/application-build.yml
@@ -1,20 +1,36 @@
 ## These are the properties to be used for Integration tests during the build.
 spring:
-#  rabbitmq:
-#    host: va10dlvhrs300.wellpoint.com
-#    port: 5672
-#    username: guest
-#    password: guest
+  rabbitmq:
+    host: va10dlvhrs300.wellpoint.com
+    port: 5672
+    username: test
+    password: test
+  redis:
+    host: va10dlvhrs300.wellpoint.com
+    port: 6379
+#spring.data.mongodb.port=0 is to run embedded mongo on random ports
   data:
     mongodb:
-      uri: mongodb://va10dlvhrs300.wellpoint.com/test
-      port: 27017
-#  redis:
-#    host: va10dlvhrs300.wellpoint.com
-#    port: 6379
+      port: 0
 stomp:
   hostName: va10dlvhrs300.wellpoint.com
 #  port: 61613
+    
+security:
+    basic:
+      enabled: 
+              false
+
+ruleBasedRequestHandler:
+                     - defaultRuleBasedRequestHandler
+                     - defaultRuleBasedResponseHandler
+
+scriptBasedRequestHandler: defaultScriptBasedRequestHandler
+scriptBasedResponseHandler: defaultScriptBasedResponseHandler
+
+scriptHandlerType: cript
+customHandlerType: Custom
+
 
 domain:
   model:
@@ -36,3 +52,52 @@ domain:
     markerAnnotations:
       javax.validation.Constraint
     markerInterfaces:
+   
+#logging:
+#  file: ${HOME}/Documents/nimbuslogs/platform-core-web.log
+user:
+  permissionToActions:
+    ACCESS:
+      _get,_info,_search,_new,_replace,_update,_delete,_nav,_process
+    READ:
+      _get,_info,_search,_getAll,_nav,_process
+    CREATE:
+      _new,_nav,_process
+    UPDATE:
+      _update,_replace,_nav,_process
+    DELETE:
+      _delete,_nav,_process
+  #authenticationStrategyBeans:
+     #jwtAuthenticationStrategy,ldapAuthenticationStrategy
+
+process:
+  key:
+    regex:
+     ([A-Za-z0-9_\\-\\*~]+)
+  database:
+    driver: 
+      com.mysql.jdbc.Driver
+    url: 
+      jdbc:mysql://localhost:3306/nimbus?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+    username: 
+      root
+    password: 
+      NimbusNonDocker123
+    taskUpdateQuery:
+      update ACT_RU_TASK set TASK_DEF_KEY_ = ?, NAME_ = ? WHERE ID_=?
+    executionUpdateQuery:
+      update ACT_RU_EXECUTION set ACT_ID_ = ?  WHERE ID_=? AND ACT_ID_=?   
+  history:
+    level: 
+      none         
+
+model:
+  persistence:
+    strategy:
+      mode:
+        ATOMIC
+dsl:
+  behavior:
+    extensions:
+      #$execute:
+        #$save      
