next add for config state impl

--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -42,8 +42,8 @@ domain:
       javax.validation.Constraint
     markerInterfaces:
    
-#logging:
-#  file: ${HOME}/Documents/nimbuslogs/platform-core-web.log
+logging:
+  file: ${HOME}/Documents/nimbuslogs/test-nimbus.log
 user:
   permissionToActions:
     ACCESS:
