--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -7,6 +7,12 @@ security:
       enabled: 
               false
 
+neo4j:
+  url: 
+    http://neo4j:password@localhost:7474
+  driver: 
+    org.neo4j.ogm.drivers.http.driver.HttpDriver
+
 ruleBasedRequestHandler:
                      - defaultRuleBasedRequestHandler
                      - defaultRuleBasedResponseHandler
