--- a/platform.spec.model.test/pom.xml
+++ b/platform.spec.model.test/pom.xml
@@ -30,10 +30,10 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-ogm-api</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
