--- a/platform.parent/pom.xml
+++ b/platform.parent/pom.xml
@@ -14,7 +14,7 @@
 	<modules>
 		<module>../platform.spec.model</module>
 		<module>../platform.spec.model.test</module>
-		<module>../platform.utils</module>
+		<!-- <module>../platform.utils</module> -->
 		<module>../platform.core.process</module>
 	</modules>
 	<url></url>
