--- a/platform.spec.model/pom.xml
+++ b/platform.spec.model/pom.xml
@@ -12,12 +12,16 @@
 	<packaging>jar</packaging>
 	<url></url>
 	<name>nimbus-core-spec</name>
-	
+
 	<organization>
 		<name>Anthem Inc.</name>
 		<url>https://www.anthem.com</url>
 	</organization>
-	
+
+	<properties>
+		<sonar.projectName>NIM-Model</sonar.projectName>
+		<sonar.jacoco.reportPath>${project.basedir}/../platform.parent/target/jacoco.exec</sonar.jacoco.reportPath>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -35,10 +39,8 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-ogm-api</artifactId>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.neo4j</groupId> <artifactId>neo4j-ogm-api</artifactId> 
+			</dependency> -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
