--- a/platform.parent/pom.xml
+++ b/platform.parent/pom.xml
@@ -10,12 +10,12 @@
 	<artifactId>com.anthem.oss.nimbus.core.parent</artifactId>
 	<packaging>pom</packaging>
 	<name>nimbus-core-parent</name>
-<!-- 	<modules>
+	<modules>
 		<module>../platform.spec.model</module>
 		<module>../platform.spec.model.test</module>
-		<module>../platform.utils</module>
+		<!-- <module>../platform.utils</module> -->
 		<module>../platform.core.process</module>
-	</modules> -->
+	</modules>
 	<url></url>
 	<organization>
 		<name>Anthem Inc.</name>
