Adding neo4j properties in build profile for testcases

--- a/platform.core.process/src/test/resources/application-build.yml
+++ b/platform.core.process/src/test/resources/application-build.yml
@@ -100,4 +100,6 @@ dsl:
   behavior:
     extensions:
       #$execute:
-        #$save      
+        #$save 
+neo4jUrl: http://neo4j:password@localhost:7474
+neo4jDriver: org.neo4j.ogm.drivers.http.driver.HttpDriver     
