--- a/platform.core.process/.project
+++ b/platform.core.process/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>nimbus-core-api</name>
-	<comment></comment>
+	<comment>core.preocess</comment>
 	<projects>
 	</projects>
 	<buildSpec>
