--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -7,10 +7,8 @@ security:
       enabled: 
               false
 
-neo4jUrl: 
-  http://neo4j:password@localhost:7474
-neo4jDriver: 
-  org.neo4j.ogm.drivers.http.driver.HttpDriver
+neo4jUrl: http://neo4j:password@localhost:7474
+neo4jDriver: org.neo4j.ogm.drivers.http.driver.HttpDriver
 
 ruleBasedRequestHandler:
                      - defaultRuleBasedRequestHandler
@@ -33,6 +31,7 @@ domain:
       - com.anthem.platform.client.extension.cm.model
       - com.anthem.platform.client.extension.cm.flow
       - com.anthem.oss.nimbus.test.sample.um.model
+      - com.anthem.oss.nimbus.core.bpm.activiti
     typeClassMappings:
       java.time.LocalDate : 
         date
@@ -83,7 +82,9 @@ process:
       update ACT_RU_EXECUTION set ACT_ID_ = ?  WHERE ID_=? AND ACT_ID_=?   
   history:
     level: 
-      none         
+      none 
+  definitions:
+    - test-process-defs/**.xml        
 template:
   definitions:
     - path: e_post/*/comm/icr/p/flow_umcase/_findPatient/_process/_execute
