--- a/platform.core.process/src/test/resources/application-test.yml
+++ b/platform.core.process/src/test/resources/application-test.yml
@@ -31,7 +31,7 @@ domain:
       - com.anthem.platform.client.extension.cm.model
       - com.anthem.platform.client.extension.cm.flow
       - com.anthem.oss.nimbus.test.sample.um.model
-      - com.anthem.oss.nimbus.core.bpm.activiti
+      - com.anthem.oss.nimbus.core.expressions
     typeClassMappings:
       java.time.LocalDate : 
         date
