--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -159,12 +159,12 @@
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--  		<dependency>
+  		<dependency>
 			<groupId>redis.embedded</groupId>
 			<artifactId>embedded-redis</artifactId>
 			<scope>test</scope>
 		</dependency> 
- -->
+
 		<!-- nimbus-core -->
 		<dependency>
 			<groupId>com.anthem.oss.nimbus.core</groupId>
