--- a/platform.core.process/pom.xml
+++ b/platform.core.process/pom.xml
@@ -180,6 +180,15 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<!-- Querydsl -->
+		<dependency>
+		    <groupId>com.querydsl</groupId>
+		    <artifactId>querydsl-mongodb</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.querydsl</groupId>
+		    <artifactId>querydsl-apt</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -201,6 +210,25 @@
 				<configuration>
 					<includeEmptyDirs>true</includeEmptyDirs>
 				</configuration>
+			</plugin>
+				<!-- Generates the MongoDB static meta model -->
+        	<plugin>    
+			    <groupId>com.mysema.maven</groupId>
+			    <artifactId>apt-maven-plugin</artifactId>
+			    <version>1.1.3</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>process</goal>
+			            </goals>
+			            <configuration>
+			                <outputDirectory>${basedir}/target/generated-sources/java</outputDirectory>
+			                <processor>
+			                  org.springframework.data.mongodb.repository.support.MongoAnnotationProcessor
+			                </processor>
+			            </configuration>
+			        </execution>
+			     </executions>
 			</plugin>
 		</plugins>
 	</build>
