--- a/platform.spec.model/pom.xml
+++ b/platform.spec.model/pom.xml
@@ -79,6 +79,36 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+			<dependency>
+		    <groupId>com.querydsl</groupId>
+		    <artifactId>querydsl-mongodb</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.querydsl</groupId>
+		    <artifactId>querydsl-apt</artifactId>
+		</dependency>
 	</dependencies>
-
+	<build>
+		<plugins>
+				<!-- Generates the MongoDB static meta model -->
+        	<plugin>
+			    <groupId>com.mysema.maven</groupId>
+			    <artifactId>apt-maven-plugin</artifactId>
+			    <version>1.1.3</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>process</goal>
+			            </goals>
+			            <configuration>
+			                <outputDirectory>${basedir}/target/generated-sources/java</outputDirectory>
+			                <processor>
+			                  com.anthem.oss.nimbus.core.DomainAnnotationProcessor
+			                </processor>
+			            </configuration>
+			        </execution>
+			     </executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
