--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -35,6 +35,7 @@
 		<activiti-spring-boot.version>6.0.0.Beta4</activiti-spring-boot.version>
 		<apache-dir-server.version>1.5.5</apache-dir-server.version>
 		<jackson-mapper-asl.version>1.9.6</jackson-mapper-asl.version>
+		<quartz.version>2.2.3</quartz.version>
 		<maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
 		<maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
 		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
@@ -190,6 +191,11 @@
 						<artifactId>ecj</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+    			<groupId>org.quartz-scheduler</groupId>
+    			<artifactId>quartz</artifactId>
+				<version>${quartz.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.neo4j.app</groupId>
