--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.anthem.oss.nimbus.core</groupId>
 	<artifactId>com.anthem.oss.nimbus.core.dependencies</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.M3</version>
 	<packaging>pom</packaging>
 	<name>nimbus-core-dependencies</name>
 	<description>Nimbus Core Bill of materials</description>
@@ -53,9 +53,9 @@
 		<mojo-exec-plugin.version>1.5.0</mojo-exec-plugin.version>
 		
 		<!-- nimbus-core -->
-		<nimbus.core.spec.version>0.0.1-SNAPSHOT</nimbus.core.spec.version>
-		<nimbus.core.test.version>0.0.1-SNAPSHOT</nimbus.core.test.version>
-		<nimbus.core.api.version>0.0.1-SNAPSHOT</nimbus.core.api.version>
+		<nimbus.core.spec.version>1.0.0.M3</nimbus.core.spec.version>
+		<nimbus.core.test.version>1.0.0.M3</nimbus.core.test.version>
+		<nimbus.core.api.version>1.0.0.M3</nimbus.core.api.version>
 	</properties>
 
 	<developers>
