--- a/platform.parent/pom.xml
+++ b/platform.parent/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anthem.oss.nimbus.core</groupId>
 		<artifactId>com.anthem.oss.nimbus.core.dependencies</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0.M3</version>
 		<relativePath>../dependencies</relativePath>
 	</parent>
 	<artifactId>com.anthem.oss.nimbus.core.parent</artifactId>
