--- a/platform.dependencies/pom.xml
+++ b/platform.dependencies/pom.xml
@@ -51,7 +51,9 @@
 		<exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
 		<maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
 		<mojo-exec-plugin.version>1.5.0</mojo-exec-plugin.version>
-		
+		<node.version>v6.10.3</node.version>
+		<npm.version>4.5.0</npm.version>
+		<frontend.plugin.version>1.4</frontend.plugin.version>
 		<!-- nimbus-core -->
 		<nimbus.core.spec.version>1.0.0.M3</nimbus.core.spec.version>
 		<nimbus.core.test.version>1.0.0.M3</nimbus.core.test.version>
@@ -308,6 +310,11 @@
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>${exec-maven-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>com.github.eirslett</groupId>
+					<artifactId>frontend-maven-plugin</artifactId>
+					<version>${frontend.plugin.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
