--- a/platform.parent/pom.xml
+++ b/platform.parent/pom.xml
@@ -152,6 +152,64 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<groupId>com.github.eirslett</groupId>
+					<artifactId>frontend-maven-plugin</artifactId>
+					<version>${frontend.plugin.version}</version>
+					<executions>
+						<execution>
+							<id>install node and npm</id>
+							<goals>
+								<goal>install-node-and-npm</goal>
+							</goals>
+							<phase>generate-resources</phase>
+							<configuration>
+								<nodeVersion>${node.version}</nodeVersion>
+								<npmVersion>${npm.version}</npmVersion>
+							</configuration>
+						</execution>
+						<execution>
+							<id>npm cache clean</id>
+							<goals>
+								<goal>npm</goal>
+							</goals>
+							<phase>generate-resources</phase>
+							<configuration>
+								<arguments>cache clean</arguments>
+							</configuration>
+						</execution>
+						<execution>
+							<id>npm config</id>
+							<goals>
+								<goal>npm</goal>
+							</goals>
+							<configuration>
+								<arguments>config set registry https://registry.npmjs.org/</arguments>
+							</configuration>
+							<phase>generate-resources</phase>
+						</execution>
+						<execution>
+							<id>npm install dev</id>
+							<goals>
+								<goal>npm</goal>
+							</goals>
+							<configuration>
+								<arguments>install</arguments>
+							</configuration>
+							<phase>generate-resources</phase>
+						</execution>
+						<execution>
+							<id>gulp build</id>
+							<goals>
+								<goal>gulp</goal>
+							</goals>
+							<phase>generate-resources</phase>
+							<configuration>
+								<arguments>build</arguments>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
 					<executions>
